system_snapshot/20250930_224524/iptables-save.txt
# Generated by iptables-save v1.8.7 on Tue Sep 30 22:45:25 2025
*filter
:INPUT DROP [432070:129977796]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [176:7508]
:DOCKER - [0:0]
:DOCKER-ISOLATION-STAGE-1 - [0:0]
:DOCKER-ISOLATION-STAGE-2 - [0:0]
:DOCKER-USER - [0:0]
:ufw-after-forward - [0:0]
:ufw-after-input - [0:0]
:ufw-after-logging-forward - [0:0]
:ufw-after-logging-input - [0:0]
:ufw-after-logging-output - [0:0]
:ufw-after-output - [0:0]
:ufw-before-forward - [0:0]
:ufw-before-input - [0:0]
:ufw-before-logging-forward - [0:0]
:ufw-before-logging-input - [0:0]
:ufw-before-logging-output - [0:0]
:ufw-before-output - [0:0]
:ufw-logging-allow - [0:0]
:ufw-logging-deny - [0:0]
:ufw-not-local - [0:0]
:ufw-reject-forward - [0:0]
:ufw-reject-input - [0:0]
:ufw-reject-output - [0:0]
:ufw-skip-to-policy-forward - [0:0]
:ufw-skip-to-policy-input - [0:0]
:ufw-skip-to-policy-output - [0:0]
:ufw-track-forward - [0:0]
:ufw-track-input - [0:0]
:ufw-track-output - [0:0]
:ufw-user-forward - [0:0]
:ufw-user-input - [0:0]
:ufw-user-limit - [0:0]
:ufw-user-limit-accept - [0:0]
:ufw-user-logging-forward - [0:0]
:ufw-user-logging-input - [0:0]
:ufw-user-logging-output - [0:0]
:ufw-user-output - [0:0]
-A INPUT -j ufw-before-logging-input
-A INPUT -j ufw-before-input
-A INPUT -j ufw-after-input
-A INPUT -j ufw-after-logging-input
-A INPUT -j ufw-reject-input
-A INPUT -j ufw-track-input
-A FORWARD -j DOCKER-USER
-A FORWARD -j DOCKER-ISOLATION-STAGE-1
-A FORWARD -o docker0 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -o docker0 -j DOCKER
-A FORWARD -i docker0 ! -o docker0 -j ACCEPT
-A FORWARD -i docker0 -o docker0 -j ACCEPT
-A FORWARD -o br-055af5d5d809 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -o br-055af5d5d809 -j DOCKER
-A FORWARD -i br-055af5d5d809 ! -o br-055af5d5d809 -j ACCEPT
-A FORWARD -i br-055af5d5d809 -o br-055af5d5d809 -j ACCEPT
-A FORWARD -o br-c6dd52a344eb -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -o br-c6dd52a344eb -j DOCKER
-A FORWARD -i br-c6dd52a344eb ! -o br-c6dd52a344eb -j ACCEPT
-A FORWARD -i br-c6dd52a344eb -o br-c6dd52a344eb -j ACCEPT
-A FORWARD -o br-9fb33d91d884 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -o br-9fb33d91d884 -j DOCKER
-A FORWARD -i br-9fb33d91d884 ! -o br-9fb33d91d884 -j ACCEPT
-A FORWARD -i br-9fb33d91d884 -o br-9fb33d91d884 -j ACCEPT
-A FORWARD -o br-8f0e90027077 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -o br-8f0e90027077 -j DOCKER
-A FORWARD -i br-8f0e90027077 ! -o br-8f0e90027077 -j ACCEPT
-A FORWARD -i br-8f0e90027077 -o br-8f0e90027077 -j ACCEPT
-A FORWARD -o br-28972ffaeabe -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -o br-28972ffaeabe -j DOCKER
-A FORWARD -i br-28972ffaeabe ! -o br-28972ffaeabe -j ACCEPT
-A FORWARD -i br-28972ffaeabe -o br-28972ffaeabe -j ACCEPT
-A FORWARD -o br-fbda18736a51 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -o br-fbda18736a51 -j DOCKER
-A FORWARD -i br-fbda18736a51 ! -o br-fbda18736a51 -j ACCEPT
-A FORWARD -i br-fbda18736a51 -o br-fbda18736a51 -j ACCEPT
-A FORWARD -o br-e7f65c135d11 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -o br-e7f65c135d11 -j DOCKER
-A FORWARD -i br-e7f65c135d11 ! -o br-e7f65c135d11 -j ACCEPT
-A FORWARD -i br-e7f65c135d11 -o br-e7f65c135d11 -j ACCEPT
-A FORWARD -o br-8a9aa634319c -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -o br-8a9aa634319c -j DOCKER
-A FORWARD -i br-8a9aa634319c ! -o br-8a9aa634319c -j ACCEPT
-A FORWARD -i br-8a9aa634319c -o br-8a9aa634319c -j ACCEPT
-A FORWARD -o br-863fa69503d2 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -o br-863fa69503d2 -j DOCKER
-A FORWARD -i br-863fa69503d2 ! -o br-863fa69503d2 -j ACCEPT
-A FORWARD -i br-863fa69503d2 -o br-863fa69503d2 -j ACCEPT
-A FORWARD -o br-8531fd6a39c8 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -o br-8531fd6a39c8 -j DOCKER
-A FORWARD -i br-8531fd6a39c8 ! -o br-8531fd6a39c8 -j ACCEPT
-A FORWARD -i br-8531fd6a39c8 -o br-8531fd6a39c8 -j ACCEPT
-A FORWARD -o br-4ccdc67425b2 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -o br-4ccdc67425b2 -j DOCKER
-A FORWARD -i br-4ccdc67425b2 ! -o br-4ccdc67425b2 -j ACCEPT
-A FORWARD -i br-4ccdc67425b2 -o br-4ccdc67425b2 -j ACCEPT
-A FORWARD -j ufw-before-logging-forward
-A FORWARD -j ufw-before-forward
-A FORWARD -j ufw-after-forward
-A FORWARD -j ufw-after-logging-forward
-A FORWARD -j ufw-reject-forward
-A FORWARD -j ufw-track-forward
-A OUTPUT -j ufw-before-logging-output
-A OUTPUT -j ufw-before-output
-A OUTPUT -j ufw-after-output
-A OUTPUT -j ufw-after-logging-output
-A OUTPUT -j ufw-reject-output
-A OUTPUT -j ufw-track-output
-A DOCKER -d 172.19.0.2/32 ! -i br-9fb33d91d884 -o br-9fb33d91d884 -p tcp -m tcp --dport 9222 -j ACCEPT
-A DOCKER -d 172.20.0.2/32 ! -i br-8f0e90027077 -o br-8f0e90027077 -p tcp -m tcp --dport 9998 -j ACCEPT
-A DOCKER -d 172.23.0.2/32 ! -i br-fbda18736a51 -o br-fbda18736a51 -p tcp -m tcp --dport 9696 -j ACCEPT
-A DOCKER -d 172.21.0.2/32 ! -i br-055af5d5d809 -o br-055af5d5d809 -p tcp -m tcp --dport 943 -j ACCEPT
-A DOCKER -d 172.27.0.2/32 ! -i br-4ccdc67425b2 -o br-4ccdc67425b2 -p tcp -m tcp --dport 7575 -j ACCEPT
-A DOCKER -d 172.21.0.2/32 ! -i br-055af5d5d809 -o br-055af5d5d809 -p udp -m udp --dport 1194 -j ACCEPT
-A DOCKER -d 172.24.0.2/32 ! -i br-8a9aa634319c -o br-8a9aa634319c -p tcp -m tcp --dport 5055 -j ACCEPT
-A DOCKER -d 172.25.0.2/32 ! -i br-863fa69503d2 -o br-863fa69503d2 -p tcp -m tcp --dport 8989 -j ACCEPT
-A DOCKER -d 172.28.0.2/32 ! -i br-c6dd52a344eb -o br-c6dd52a344eb -p tcp -m tcp --dport 6767 -j ACCEPT
-A DOCKER -d 172.22.0.2/32 ! -i br-e7f65c135d11 -o br-e7f65c135d11 -p tcp -m tcp --dport 7878 -j ACCEPT
-A DOCKER-ISOLATION-STAGE-1 -i docker0 ! -o docker0 -j DOCKER-ISOLATION-STAGE-2
-A DOCKER-ISOLATION-STAGE-1 -i br-055af5d5d809 ! -o br-055af5d5d809 -j DOCKER-ISOLATION-STAGE-2
-A DOCKER-ISOLATION-STAGE-1 -i br-c6dd52a344eb ! -o br-c6dd52a344eb -j DOCKER-ISOLATION-STAGE-2
-A DOCKER-ISOLATION-STAGE-1 -i br-9fb33d91d884 ! -o br-9fb33d91d884 -j DOCKER-ISOLATION-STAGE-2
-A DOCKER-ISOLATION-STAGE-1 -i br-8f0e90027077 ! -o br-8f0e90027077 -j DOCKER-ISOLATION-STAGE-2
-A DOCKER-ISOLATION-STAGE-1 -i br-28972ffaeabe ! -o br-28972ffaeabe -j DOCKER-ISOLATION-STAGE-2
-A DOCKER-ISOLATION-STAGE-1 -i br-fbda18736a51 ! -o br-fbda18736a51 -j DOCKER-ISOLATION-STAGE-2
-A DOCKER-ISOLATION-STAGE-1 -i br-e7f65c135d11 ! -o br-e7f65c135d11 -j DOCKER-ISOLATION-STAGE-2
-A DOCKER-ISOLATION-STAGE-1 -i br-8a9aa634319c ! -o br-8a9aa634319c -j DOCKER-ISOLATION-STAGE-2
-A DOCKER-ISOLATION-STAGE-1 -i br-863fa69503d2 ! -o br-863fa69503d2 -j DOCKER-ISOLATION-STAGE-2
-A DOCKER-ISOLATION-STAGE-1 -i br-8531fd6a39c8 ! -o br-8531fd6a39c8 -j DOCKER-ISOLATION-STAGE-2
-A DOCKER-ISOLATION-STAGE-1 -i br-4ccdc67425b2 ! -o br-4ccdc67425b2 -j DOCKER-ISOLATION-STAGE-2
-A DOCKER-ISOLATION-STAGE-1 -j RETURN
-A DOCKER-ISOLATION-STAGE-2 -o docker0 -j DROP
-A DOCKER-ISOLATION-STAGE-2 -o br-055af5d5d809 -j DROP
-A DOCKER-ISOLATION-STAGE-2 -o br-c6dd52a344eb -j DROP
-A DOCKER-ISOLATION-STAGE-2 -o br-9fb33d91d884 -j DROP
-A DOCKER-ISOLATION-STAGE-2 -o br-8f0e90027077 -j DROP
-A DOCKER-ISOLATION-STAGE-2 -o br-28972ffaeabe -j DROP
-A DOCKER-ISOLATION-STAGE-2 -o br-fbda18736a51 -j DROP
-A DOCKER-ISOLATION-STAGE-2 -o br-e7f65c135d11 -j DROP
-A DOCKER-ISOLATION-STAGE-2 -o br-8a9aa634319c -j DROP
-A DOCKER-ISOLATION-STAGE-2 -o br-863fa69503d2 -j DROP
-A DOCKER-ISOLATION-STAGE-2 -o br-8531fd6a39c8 -j DROP
-A DOCKER-ISOLATION-STAGE-2 -o br-4ccdc67425b2 -j DROP
-A DOCKER-ISOLATION-STAGE-2 -j RETURN
-A DOCKER-USER -j RETURN
-A ufw-after-input -p udp -m udp --dport 137 -j ufw-skip-to-policy-input
-A ufw-after-input -p udp -m udp --dport 138 -j ufw-skip-to-policy-input
-A ufw-after-input -p tcp -m tcp --dport 139 -j ufw-skip-to-policy-input
-A ufw-after-input -p tcp -m tcp --dport 445 -j ufw-skip-to-policy-input
-A ufw-after-input -p udp -m udp --dport 67 -j ufw-skip-to-policy-input
-A ufw-after-input -p udp -m udp --dport 68 -j ufw-skip-to-policy-input
-A ufw-after-input -m addrtype --dst-type BROADCAST -j ufw-skip-to-policy-input
-A ufw-after-logging-forward -m limit --limit 3/min --limit-burst 10 -j LOG --log-prefix "[UFW BLOCK] "
-A ufw-after-logging-input -m limit --limit 3/min --limit-burst 10 -j LOG --log-prefix "[UFW BLOCK] "
-A ufw-after-logging-output -m limit --limit 3/min --limit-burst 10 -j LOG --log-prefix "[UFW ALLOW] "
-A ufw-before-forward -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A ufw-before-forward -p icmp -m icmp --icmp-type 3 -j ACCEPT
-A ufw-before-forward -p icmp -m icmp --icmp-type 11 -j ACCEPT
-A ufw-before-forward -p icmp -m icmp --icmp-type 12 -j ACCEPT
-A ufw-before-forward -p icmp -m icmp --icmp-type 8 -j ACCEPT
-A ufw-before-forward -j ufw-user-forward
-A ufw-before-input -i lo -j ACCEPT
-A ufw-before-input -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A ufw-before-input -m conntrack --ctstate INVALID -j ufw-logging-deny
-A ufw-before-input -m conntrack --ctstate INVALID -j DROP
-A ufw-before-input -p icmp -m icmp --icmp-type 3 -j ACCEPT
-A ufw-before-input -p icmp -m icmp --icmp-type 11 -j ACCEPT
-A ufw-before-input -p icmp -m icmp --icmp-type 12 -j ACCEPT
-A ufw-before-input -p icmp -m icmp --icmp-type 8 -j ACCEPT
-A ufw-before-input -p udp -m udp --sport 67 --dport 68 -j ACCEPT
-A ufw-before-input -j ufw-not-local
-A ufw-before-input -d 224.0.0.251/32 -p udp -m udp --dport 5353 -j ACCEPT
-A ufw-before-input -d 239.255.255.250/32 -p udp -m udp --dport 1900 -j ACCEPT
-A ufw-before-input -j ufw-user-input
-A ufw-before-logging-forward -m conntrack --ctstate NEW -m limit --limit 3/min --limit-burst 10 -j LOG --log-prefix "[UFW AUDIT] "
-A ufw-before-logging-input -m conntrack --ctstate NEW -m limit --limit 3/min --limit-burst 10 -j LOG --log-prefix "[UFW AUDIT] "
-A ufw-before-logging-output -m conntrack --ctstate NEW -m limit --limit 3/min --limit-burst 10 -j LOG --log-prefix "[UFW AUDIT] "
-A ufw-before-output -o lo -j ACCEPT
-A ufw-before-output -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A ufw-before-output -j ufw-user-output
-A ufw-logging-allow -m limit --limit 3/min --limit-burst 10 -j LOG --log-prefix "[UFW ALLOW] "
-A ufw-logging-deny -m conntrack --ctstate INVALID -m limit --limit 3/min --limit-burst 10 -j LOG --log-prefix "[UFW AUDIT INVALID] "
-A ufw-logging-deny -m limit --limit 3/min --limit-burst 10 -j LOG --log-prefix "[UFW BLOCK] "
-A ufw-not-local -m addrtype --dst-type LOCAL -j RETURN
-A ufw-not-local -m addrtype --dst-type MULTICAST -j RETURN
-A ufw-not-local -m addrtype --dst-type BROADCAST -j RETURN
-A ufw-not-local -m limit --limit 3/min --limit-burst 10 -j ufw-logging-deny
-A ufw-not-local -j DROP
-A ufw-skip-to-policy-forward -j DROP
-A ufw-skip-to-policy-input -j DROP
-A ufw-skip-to-policy-output -j ACCEPT
-A ufw-track-output -p tcp -m conntrack --ctstate NEW -j ACCEPT
-A ufw-track-output -p udp -m conntrack --ctstate NEW -j ACCEPT
-A ufw-user-input -p tcp -m tcp --dport 22 -m comment --comment "\'dapp_OpenSSH\'" -j ACCEPT
-A ufw-user-input -p udp -m udp --dport 1194 -j ACCEPT
-A ufw-user-input -p tcp -m tcp --dport 943 -j ACCEPT
-A ufw-user-input -p tcp -m tcp --dport 6969 -j ACCEPT
-A ufw-user-input -p tcp -m tcp --dport 9222 -j ACCEPT
-A ufw-user-input -p tcp -m tcp --dport 9998 -j ACCEPT
-A ufw-user-input -p tcp -m tcp --dport 7878 -j ACCEPT
-A ufw-user-input -p tcp -m tcp --dport 9696 -j ACCEPT
-A ufw-user-input -p tcp -m tcp --dport 5055 -j ACCEPT
-A ufw-user-input -p tcp -m tcp --dport 8989 -j ACCEPT
-A ufw-user-input -p tcp -m tcp --dport 7575 -j ACCEPT
-A ufw-user-input -p tcp -m tcp --dport 6767 -j ACCEPT
-A ufw-user-limit -m limit --limit 3/min -j LOG --log-prefix "[UFW LIMIT BLOCK] "
-A ufw-user-limit -j REJECT --reject-with icmp-port-unreachable
-A ufw-user-limit-accept -j ACCEPT
COMMIT
# Completed on Tue Sep 30 22:45:25 2025
# Generated by iptables-save v1.8.7 on Tue Sep 30 22:45:25 2025
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
:DOCKER - [0:0]
-A PREROUTING -m addrtype --dst-type LOCAL -j DOCKER
-A OUTPUT ! -d 127.0.0.0/8 -m addrtype --dst-type LOCAL -j DOCKER
-A POSTROUTING -s 172.17.0.0/16 ! -o docker0 -j MASQUERADE
-A POSTROUTING -s 172.21.0.0/16 ! -o br-055af5d5d809 -j MASQUERADE
-A POSTROUTING -s 172.28.0.0/16 ! -o br-c6dd52a344eb -j MASQUERADE
-A POSTROUTING -s 172.19.0.0/16 ! -o br-9fb33d91d884 -j MASQUERADE
-A POSTROUTING -s 172.20.0.0/16 ! -o br-8f0e90027077 -j MASQUERADE
-A POSTROUTING -s 172.26.0.0/16 ! -o br-28972ffaeabe -j MASQUERADE
-A POSTROUTING -s 172.23.0.0/16 ! -o br-fbda18736a51 -j MASQUERADE
-A POSTROUTING -s 172.22.0.0/16 ! -o br-e7f65c135d11 -j MASQUERADE
-A POSTROUTING -s 172.24.0.0/16 ! -o br-8a9aa634319c -j MASQUERADE
-A POSTROUTING -s 172.25.0.0/16 ! -o br-863fa69503d2 -j MASQUERADE
-A POSTROUTING -s 172.18.0.0/16 ! -o br-8531fd6a39c8 -j MASQUERADE
-A POSTROUTING -s 172.27.0.0/16 ! -o br-4ccdc67425b2 -j MASQUERADE
-A POSTROUTING -s 172.19.0.2/32 -d 172.19.0.2/32 -p tcp -m tcp --dport 9222 -j MASQUERADE
-A POSTROUTING -s 172.20.0.2/32 -d 172.20.0.2/32 -p tcp -m tcp --dport 9998 -j MASQUERADE
-A POSTROUTING -s 172.23.0.2/32 -d 172.23.0.2/32 -p tcp -m tcp --dport 9696 -j MASQUERADE
-A POSTROUTING -s 172.21.0.2/32 -d 172.21.0.2/32 -p tcp -m tcp --dport 943 -j MASQUERADE
-A POSTROUTING -s 172.27.0.2/32 -d 172.27.0.2/32 -p tcp -m tcp --dport 7575 -j MASQUERADE
-A POSTROUTING -s 172.21.0.2/32 -d 172.21.0.2/32 -p udp -m udp --dport 1194 -j MASQUERADE
-A POSTROUTING -s 172.24.0.2/32 -d 172.24.0.2/32 -p tcp -m tcp --dport 5055 -j MASQUERADE
-A POSTROUTING -s 172.25.0.2/32 -d 172.25.0.2/32 -p tcp -m tcp --dport 8989 -j MASQUERADE
-A POSTROUTING -s 172.28.0.2/32 -d 172.28.0.2/32 -p tcp -m tcp --dport 6767 -j MASQUERADE
-A POSTROUTING -s 172.22.0.2/32 -d 172.22.0.2/32 -p tcp -m tcp --dport 7878 -j MASQUERADE
-A DOCKER -i docker0 -j RETURN
-A DOCKER -i br-055af5d5d809 -j RETURN
-A DOCKER -i br-c6dd52a344eb -j RETURN
-A DOCKER -i br-9fb33d91d884 -j RETURN
-A DOCKER -i br-8f0e90027077 -j RETURN
-A DOCKER -i br-28972ffaeabe -j RETURN
-A DOCKER -i br-fbda18736a51 -j RETURN
-A DOCKER -i br-e7f65c135d11 -j RETURN
-A DOCKER -i br-8a9aa634319c -j RETURN
-A DOCKER -i br-863fa69503d2 -j RETURN
-A DOCKER -i br-8531fd6a39c8 -j RETURN
-A DOCKER -i br-4ccdc67425b2 -j RETURN
-A DOCKER ! -i br-9fb33d91d884 -p tcp -m tcp --dport 9222 -j DNAT --to-destination 172.19.0.2:9222
-A DOCKER ! -i br-8f0e90027077 -p tcp -m tcp --dport 9998 -j DNAT --to-destination 172.20.0.2:9998
-A DOCKER ! -i br-fbda18736a51 -p tcp -m tcp --dport 9696 -j DNAT --to-destination 172.23.0.2:9696
-A DOCKER ! -i br-055af5d5d809 -p tcp -m tcp --dport 943 -j DNAT --to-destination 172.21.0.2:943
-A DOCKER ! -i br-4ccdc67425b2 -p tcp -m tcp --dport 7575 -j DNAT --to-destination 172.27.0.2:7575
-A DOCKER ! -i br-055af5d5d809 -p udp -m udp --dport 1194 -j DNAT --to-destination 172.21.0.2:1194
-A DOCKER ! -i br-8a9aa634319c -p tcp -m tcp --dport 5055 -j DNAT --to-destination 172.24.0.2:5055
-A DOCKER ! -i br-863fa69503d2 -p tcp -m tcp --dport 8989 -j DNAT --to-destination 172.25.0.2:8989
-A DOCKER ! -i br-c6dd52a344eb -p tcp -m tcp --dport 6969 -j DNAT --to-destination 172.28.0.2:6767
-A DOCKER ! -i br-e7f65c135d11 -p tcp -m tcp --dport 7878 -j DNAT --to-destination 172.22.0.2:7878
COMMIT
# Completed on Tue Sep 30 22:45:25 2025
